p2/confs/app1.yaml
apiVersion: v1

kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80 # This is the port that the service listens on
      targetPort: 8080 # This is the port that the container listens on

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
