p2/confs/app2.yaml
apiVersion: v1

kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
